--- a/index.html
+++ b/index.html
@@ -1,16 +1,75 @@
 <!DOCTYPE html>
-<html ng-app>
-  <head>
-    <meta charset="utf-8">
-    <title>Calculadora Bitcoin</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" charset="utf-8"></script>
-  </head>
-  <body>
-<h1>Calculadora Bitcoin</h1>
-<h2>Valor BRL : {{brl}}</h2>
-<h2>Valor Bitcoin : {{bitcoin}}</h2>
-<input type="text" name="name" value="" ng-model="brl">
-<input type="text" name="name" value="" ng-model="bitcoin">
+<html ng-app="calcbticoin">
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Calculadora Bitcoin</title>
+
+<style>
+.block{
+  display: block-inline;
+  float: left;
+  margin: 10px;
+}
+
+.textcalc{
+  font-size: 2em;;
+}
+
+.inputcalc{
+  width: 20%;
+  height: 40px;
+}
+</style>
+
+</head>
+
+
+
+
+<body ng-controller="mbCtrl">
+  <h1>Calculadora Bitcoin </h1>
+  <div id="currencytable" class="block">
+    <table border="1">
+      <tr ng-repeat="(key,value) in blockchain">
+        <td>
+          {{$index}}
+        </td>
+        <td>
+          {{value.symbol}}
+        </td>
+        <td>
+          {{key}}
+        </td>
+        <td>
+          {{value.last}}
+        </td>
+        <td>
+          {{value.buy}}
+        </td>
+        <td>
+          {{value.sell}}
+        </td>
+
+      </tr>
+    </table>
+  </div>
+
+
+  <div class="block">
+    <label class="textcalc">Valor BRL : </label>
+    <input class="inputcalc" type="text" name="name" value="" ng-model="brl">
+    <label class="textcalc">Valor Bitcoin : </label>
+    <input class="inputcalc" type="text" name="name" value="" ng-model="bitcoin">
+
+  </div>
+  {{brl}}
+  {{bitcoin}}
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" charset="utf-8"></script>
+  <script src="value.js"></script>
+</body>
+
 </html>
