--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     .block {
       display: block-inline;
       float: left;
-      margin: 2px;
+      margin: 2%;
     }
 
     .textcalc {
@@ -21,78 +21,119 @@
       width: 10%;
       height: 40px;
     }
+
+    .priceRef {
+      margin: 2%;
+      padding: 1%;
+    }
+
+    .valueRef {
+      margin: 2%;
+      padding: 1%;
+    }
+
+    .labelPrice {
+      font-size: 2em;
+    }
+
+    .price {
+      font-size: 3em;
+      font-style: arial;
+    }
+
+    .footer {
+      clear: both;
+      padding: 0 15px;
+    }
+
+    .header {
+      margin: 2%;
+    }
   </style>
 
 </head>
 
-
-
-
 <body ng-controller="mbCtrl">
-  <h1>Calculadora Bitcoin </h1>
-  <div id="currencytable" class="block">
-    <table border="1">
-      <tr ng-repeat="(key,value) in blockchain">
-        <td>
-          {{$index}}
-        </td>
-        <td>
-          {{value.symbol}}
-        </td>
-        <td>
-          {{key}}
-        </td>
-        <td>
-          {{value.last}}
-        </td>
-        <td>
-          {{value.buy}}
-        </td>
-        <td>
-          {{value.sell}}
-        </td>
-      </tr>
-    </table>
-  </div>
 
-  <div>
+  <div id="pagewrap">
 
-    <div class="">
-      <label class="textcalc">Preço do Bitcoin em BRL : {{btctoyou}}</label>
-      <input class="inputcalc" type="text" name="brlrefname" value="" ng-model="brlref" ng-required="number">
+    <div class="header">
+      <h1>Calculadora Bitcoin </h1>
     </div>
 
-    <div class="">
-      <label class="textcalc">Valor BRL : </label>
-      <input class="inputcalc" type="text" name="brlname" value="" ng-model="brl" ng-required="number">
-      <label class="textcalc">Valor Bitcoin : </label>
-      <input class="inputcalc" type="text" name="btcname" value="" ng-model="bitcoin" required="number">
+    <div id="currencytable" class="block">
+
+      <h3>Tabela Referência Block Chain </h3>
+
+      <table border="1">
+        <tr ng-repeat="(key,value) in blockchain">
+          <td>
+            {{$index}}
+          </td>
+          <td>
+            {{value.symbol}}
+          </td>
+          <td>
+            {{key}}
+          </td>
+          <td>
+            {{value.last}}
+          </td>
+          <td>
+            {{value.buy}}
+          </td>
+          <td>
+            {{value.sell}}
+          </td>
+        </tr>
+      </table>
     </div>
-  </div>
+
+    <div>
+
+      <div class="priceRef">
+        <label class="textcalc">Preço do Bitcoin em BRL : {{btctoyou}}</label>
+        <input class="inputcalc" type="text" name="brlrefname" value="" ng-model="brlref" ng-required="number">
+      </div>
+
+      <div class="valueRef">
+        <label class="textcalc">Valor BRL : </label>
+        <input class="inputcalc" type="text" name="brlname" value="" ng-model="brl" ng-required="number">
+        <label class="textcalc">Valor Bitcoin : </label>
+        <input class="inputcalc" type="text" name="btcname" value="" ng-model="bitcoin" required="number">
+      </div>
+    </div>
 
 
-  <div class="">
-    <table>
-      <tr>
-        <td>
-          <span> BRL : </span>
-        </td>
-        <td>
-          {{ brlref * bitcoin | number : 2}}
-        </td>
+    <div class="">
+      <table>
+        <tr>
+          <td>
+            <span class="labelPrice"> BRL : </span>
+          </td>
+          <td>
+            <span class="price"> {{ brlref * bitcoin | number : 2}} </span>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <span class="labelPrice">Bitcoin :</span>
+          </td>
+          <td>
+            <span class="price"> {{ brl / brlref | number : 8 }} </span>
+          </td>
+        </tr>
+      </table>
 
-      </tr>
-      <tr>
-        <td>
-          <span>Bitcoin :</span>
-        </td>
-        <td>
-          {{ brl / brlref | number : 8 }}
-        </td>
-      </tr>
-    </table>
 
+    </div>
 
+    <div class="footer">
+      <p>Esta página é mantida por Saulo Campos sobre licensa <a href="http://www.gnu.org/licenses/gpl-3.0.en.html">GPL</a> </p>
+      <p>
+        Repositório : <a href="https://github.com/saulocamposi/calculadorabitcoin">https://github.com/saulocamposi/calculadorabitcoin</a>
+      </p>
+    </div>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" charset="utf-8"></script>
