--- a/lab.html
+++ b/lab.html
@@ -23,6 +23,29 @@ $( "input" ).keydown(function(e){
       }
     }
   });
+
+  $.ajax({
+    url: "https://www.bitcointoyou.com/api/ticker.aspx?callback=JSON_CALLBACK",
+
+    // The name of the callback parameter, as specified by the YQL service
+    jsonp: "callback",
+
+    // Tell jQuery we're expecting JSONP
+    dataType: "jsonp",
+
+    // Tell YQL what we want and that we want JSON
+    data: {
+        q: "select title,abstract,url from search.news where query=\"cat\"",
+        format: "json"
+    },
+
+    // Work with the response
+    success: function( response ) {
+        console.log( response ); // server response
+    }
+});
+
+
 </script>
   </body>
 </html>
