--- a/index_in_working.html
+++ b/index_in_working.html
@@ -4,7 +4,7 @@
  <head>
   <meta charset="utf-8">
   <title>Calculadora Bitcoin</title>
-    <link rel="icon" href="https://foxbit.exchange/assets/exchange_logos/foxbit_favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
