--- a/index_in_working.html
+++ b/index_in_working.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html ng-app="calcbtc">
 
- <head>
+<head>
   <meta charset="utf-8">
   <title>Calculadora Bitcoin</title>
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body ng-controller="mbCtrl">
@@ -23,7 +23,7 @@
       <table border="1">
         <tr>
           <th>
-            Logo
+            Empresas
           </th>
           <th>
             Volume
@@ -37,10 +37,7 @@
         </tr>
         <tr>
           <td class="logofox">
-            <img data-switch-view="offerbook" src="http://www.foxbit.com.br/img/logo.svg" style="
-              height: 30px;
-              margin-top: -10px;
-              margin-bottom: -10px;">
+            Foxbit
           </td>
 
           <td>
@@ -55,10 +52,37 @@
         </tr>
         <tr>
           <td class="logofox">
-            <img data-switch-view="offerbook" src="https://foxbit.exchange/assets/exchange_logos/foxbit_toolbar_logo.png" style="
-              height: 30px;
-              margin-top: -10px;
-              margin-bottom: -10px;">
+            Bitcointoyou
+          </td>
+
+          <td>
+            {{btctoyou.ticker.vol}}
+          </td>
+          <td>
+            {{btctoyou.ticker.high}}
+          </td>
+          <td>
+            {{btctoyou.ticker.low}}
+          </td>
+        </tr>
+        <tr>
+          <td class="logofox">
+            MercadoBitcoin
+          </td>
+
+          <td>
+            {{btctoyou.ticker.vol}}
+          </td>
+          <td>
+            {{btctoyou.ticker.high}}
+          </td>
+          <td>
+            {{btctoyou.ticker.low}}
+          </td>
+        </tr>
+        <tr>
+          <td class="logofox">
+            Outra
           </td>
 
           <td>
@@ -84,9 +108,9 @@
       </div>
 
       <div class="valueRef">
-        <label class="textcalc">Valor BRL : </label>
+        <label class="textcalc">Qtd BRL : </label>
         <input class="inputcalc" type="text" name="brlname" value="" ng-model="brl" ng-required="number">
-        <label class="textcalc">Valor Bitcoin : </label>
+        <label class="textcalc">Qtd Bitcoin : </label>
         <input class="inputcalc" type="text" name="btcname" value="" ng-model="bitcoin" required="number">
       </div>
     </div>
@@ -122,7 +146,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" charset="utf-8"></script>
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script src="value.js"></script>
+  <script src="valuep.js"></script>
 
 </body>
 
