--- a/index_in_working.html
+++ b/index_in_working.html
@@ -17,8 +17,9 @@
     </div>
 
     <div id="currencytable" class="block">
+<h2>Exchanges Brasileiras</h2>
 
-      <h3>Exchanges Brasileiras</h3>
+      <h3> Último minuto</h3>
 
       <table border="1">
         <tr>
@@ -67,7 +68,57 @@
         </tr>
         <tr>
           <td class="logofox">
-            MercadoBitcoin
+            Negociecoins
+          </td>
+
+          <td>
+            {{negociecoins.vol}}
+          </td>
+          <td>
+            {{negociecoins.high}}
+          </td>
+          <td>
+            {{negociecoins.low}}
+          </td>
+        </tr>
+      </table>
+
+
+      <h3>Última Hora - Dados BitValor</h3>
+
+      <table border="1">
+        <tr>
+          <th>
+            Empresas
+          </th>
+          <th>
+            Volume
+          </th>
+          <th>
+            Maior Valor
+          </th>
+          <th>
+            Menor Valor
+          </th>
+        </tr>
+        <tr>
+          <td class="logofox">
+            Foxbit
+          </td>
+
+          <td>
+            {{foxbit.vol}}
+          </td>
+          <td>
+            {{foxbit.high}}
+          </td>
+          <td>
+            {{foxbit.low}}
+          </td>
+        </tr>
+        <tr>
+          <td class="logofox">
+            Bitcointoyou
           </td>
 
           <td>
@@ -82,28 +133,25 @@
         </tr>
         <tr>
           <td class="logofox">
-            Outra
+            Negociecoins
           </td>
 
           <td>
-            {{btctoyou.ticker.vol}}
+            {{negociecoins.vol}}
           </td>
           <td>
-            {{btctoyou.ticker.high}}
+            {{negociecoins.high}}
           </td>
           <td>
-            {{btctoyou.ticker.low}}
+            {{negociecoins.low}}
           </td>
         </tr>
-
-
       </table>
     </div>
-
+    
     <div>
-
       <div class="priceRef">
-        <label class="textcalc">Preço do Bitcoin em BRL : {{btctoyou}}</label>
+        <label class="textcalc">Preço do Bitcoin em BRL : </label>
         <input class="inputcalc" type="text" name="brlrefname" value="" ng-model="brlref" ng-required="number">
       </div>
 
