the flowBTC was inserted and MTC was realign

--- a/index.html
+++ b/index.html
@@ -81,10 +81,28 @@
             {{negociecoins.low}}
           </td>
         </tr>
+        <tr>
+          <td class="logofox">
+            flowBTC
+          </td>
+
+          <td>
+            {{flowbtc.volume}}
+          </td>
+          <td>
+            {{flowbtc.high}}
+          </td>
+          <td>
+            {{flowbtc.low}}
+          </td>
+        </tr>
+
+
+
       </table>
 
 
-      <h3>Dados BitValor</h3>
+      <h3>Dados API BitValor - Consolidado Última Hora</h3>
 
       <table border="1">
         <tr>
@@ -118,6 +136,22 @@
         </tr>
         <tr>
           <td class="logofox">
+            Mercado Bitcoin
+          </td>
+
+          <td>
+            {{bitvalor.MBT.vol}}
+          </td>
+          <td>
+            {{bitvalor.MBT.high}}
+          </td>
+          <td>
+            {{bitvalor.MBT.low}}
+          </td>
+        </tr>
+        <tr>
+        <tr>
+          <td class="logofox">
             Bitcointoyou
           </td>
 
@@ -133,20 +167,20 @@
         </tr>
         <tr>
           <td class="logofox">
-            Mercado Bitcoin
+            Negociecoins
           </td>
 
           <td>
-            {{bitvalor.MBT.vol}}
+            {{bitvalor.NEG.vol}}
           </td>
           <td>
-            {{bitvalor.MBT.high}}
+            {{bitvalor.NEG.high}}
           </td>
           <td>
-            {{bitvalor.MBT.low}}
+            {{bitvalor.NEG.low}}
           </td>
         </tr>
-        <tr>
+
           <td class="logofox">
             flowBTC
           </td>
