--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
   <title>Calculadora Bitcoin</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 </head>
 
 <body ng-controller="mbCtrl">
 
   <div id="pagewrap">
 
-    <div class="header">
-      <h1>Calculadora Bitcoin </h1>
-    </div>
+    <div class="block">
+      <div class="header">
+        <h1>Calculadora Bitcoin </h1>
+      </div>
 
-    <div id="currencytable" class="block">
-<h2>Exchanges Brasileiras</h2>
+      <h3>Exchanges Brasileiras</h3>
 
-      <h3>Dados API Exchanges</h3>
-
-      <table border="1">
+      <table class="pure-table pure-table-horizontal">
         <tr>
           <th>
             Empresas
@@ -96,15 +95,12 @@
             {{flowbtc.low}}
           </td>
         </tr>
-
-
-
       </table>
 
 
-      <h3>Dados API BitValor - Consolidado Última Hora</h3>
+      <h3>BitValor - Consolidado 12h Horas</h3>
 
-      <table border="1">
+      <table class="pure-table pure-table-horizontal">
         <tr>
           <th>
             Empresas
@@ -149,38 +145,38 @@
             {{bitvalor.MBT.low}}
           </td>
         </tr>
-        <tr>
-        <tr>
-          <td class="logofox">
-            Bitcointoyou
-          </td>
 
-          <td>
-            {{bitvalor.B2U.vol}}
-          </td>
-          <td>
-            {{bitvalor.B2U.high}}
-          </td>
-          <td>
-            {{bitvalor.B2U.low}}
-          </td>
-        </tr>
-        <tr>
-          <td class="logofox">
-            Negociecoins
-          </td>
+          <tr>
+            <td class="logofox">
+              Bitcointoyou
+            </td>
 
-          <td>
-            {{bitvalor.NEG.vol}}
-          </td>
-          <td>
-            {{bitvalor.NEG.high}}
-          </td>
-          <td>
-            {{bitvalor.NEG.low}}
-          </td>
-        </tr>
+            <td>
+              {{bitvalor.B2U.vol}}
+            </td>
+            <td>
+              {{bitvalor.B2U.high}}
+            </td>
+            <td>
+              {{bitvalor.B2U.low}}
+            </td>
+          </tr>
+          <tr>
+            <td class="logofox">
+              Negociecoins
+            </td>
 
+            <td>
+              {{bitvalor.NEG.vol}}
+            </td>
+            <td>
+              {{bitvalor.NEG.high}}
+            </td>
+            <td>
+              {{bitvalor.NEG.low}}
+            </td>
+          </tr>
+<tr>
           <td class="logofox">
             flowBTC
           </td>
@@ -195,66 +191,73 @@
             {{bitvalor.FLW.low}}
           </td>
         </tr>
+        <tr>
+          <td class="logofox">
+            LocalBitcoins
+          </td>
 
-
+          <td>
+            {{bitvalor.LOC.vol}}
+          </td>
+          <td>
+            {{bitvalor.LOC.high}}
+          </td>
+          <td>
+            {{bitvalor.LOC.low}}
+          </td>
+        </tr>
       </table>
     </div>
+<div class="mainCalculator">
 
-    <div>
-      <div class="priceRef">
-        <label class="textcalc">Preço do Bitcoin em BRL : </label>
-        <input class="inputcalc" type="text" name="brlrefname" value="" ng-model="brlref" ng-required="number">
-      </div>
 
-      <div class="valueRef">
-        <label class="textcalc">Qtd BRL : </label>
-        <input class="inputcalc" type="text" name="brlname" value="" ng-model="brl" ng-required="number">
-        <label class="textcalc">Qtd Bitcoin : </label>
-        <input class="inputcalc" type="text" name="btcname" value="" ng-model="bitcoin" required="number">
-      </div>
-    </div>
-
-    <div class="">
-      <table>
-        <tr>
-          <td>
+  <div class="mainresults">
+    <div class="results">
             <span class="labelPrice"> BRL : </span>
-          </td>
-          <td>
             <span class="price"> {{ brlref * bitcoin | number : 2}} </span>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <span class="labelPrice">Bitcoin :</span>
-          </td>
-          <td>
-            <span class="price"> {{ brl / brlref | number : 8 }} </span>
-          </td>
-        </tr>
-      </table>
     </div>
 
-    <div class="footer">
-      <p>Esta página é mantida por Saulo Campos</p>
-      <p>
-        Repositório : <a href="https://github.com/saulocamposi/calculadorabitcoin">https://github.com/saulocamposi/calculadorabitcoin</a>
-      </p>
+      <div class="results">
+        <span class="labelPrice">Bitcoin :</span>
+        <span class="price"> {{ brl / brlref | number : 8 }} </span>
+      </div>
+  </div>
+
+
+    <div class="inputCalculator">
+            <input class="inputcalc" type="text" name="brlrefname" value="" ng-model="brlref" ng-required="number" placeholder="Digite o preço do Bitcoin">
+            <input class="inputcalc" type="text" name="brlname" value="" ng-model="brl" ng-required="number" placeholder="Valor em Reais">
+            <input class="inputcalc" type="text" name="btcname" value="" ng-model="bitcoin" required="number" placeholder="Valor em Bitcoins">
     </div>
+
+
+  </div>
+
+  <div class="footer">
+    <p>Esta página é mantida por Saulo Campos</p>
+    <p>
+      Repositório : <a href="https://github.com/saulocamposi/calculadorabitcoin">https://github.com/saulocamposi/calculadorabitcoin</a>
+    </p>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" charset="utf-8"></script>
   <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="valuep.js"></script>
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-71521810-1', 'auto');
     ga('send', 'pageview');
-
   </script>
 </body>
 
