--- a/index.html
+++ b/index.html
@@ -18,136 +18,151 @@
         <h1>Calculadora Bitcoin </h1>
       </div>
 
-      <h3>Exchanges Brasileiras</h3>
-
-      <table class="pure-table pure-table-horizontal">
-        <tr>
-          <th>
-            Empresas
-          </th>
-          <th>
-            Volume
-          </th>
-          <th>
-            Maior Valor
-          </th>
-          <th>
-            Menor Valor
-          </th>
-        </tr>
-        <tr>
-          <td class="logofox">
-            Foxbit
-          </td>
-
-          <td>
-            {{foxbit.vol}}
-          </td>
-          <td>
-            {{foxbit.high}}
-          </td>
-          <td>
-            {{foxbit.low}}
-          </td>
-        </tr>
-        <tr>
-          <td class="logofox">
-            Bitcointoyou
-          </td>
-
-          <td>
-            {{btctoyou.ticker.vol}}
-          </td>
-          <td>
-            {{btctoyou.ticker.high}}
-          </td>
-          <td>
-            {{btctoyou.ticker.low}}
-          </td>
-        </tr>
-        <tr>
-          <td class="logofox">
-            Negociecoins
-          </td>
-
-          <td>
-            {{negociecoins.vol}}
-          </td>
-          <td>
-            {{negociecoins.high}}
-          </td>
-          <td>
-            {{negociecoins.low}}
-          </td>
-        </tr>
-        <tr>
-          <td class="logofox">
-            flowBTC
-          </td>
-
-          <td>
-            {{flowbtc.volume}}
-          </td>
-          <td>
-            {{flowbtc.high}}
-          </td>
-          <td>
-            {{flowbtc.low}}
-          </td>
-        </tr>
-      </table>
 
 
-      <h3>BitValor - Consolidado 12h Horas</h3>
+<div class="card">
 
-      <table class="pure-table pure-table-horizontal">
-        <tr>
-          <th>
-            Empresas
-          </th>
-          <th>
-            Volume
-          </th>
-          <th>
-            Maior Valor
-          </th>
-          <th>
-            Menor Valor
-          </th>
-        </tr>
-        <tr>
-          <td class="logofox">
-            Foxbit
-          </td>
+  <div class="title-card">
+    <span>Exchanges Brasileiras</span>
+  </div>
 
-          <td>
-            {{bitvalor.FOX.vol}}
-          </td>
-          <td>
-            {{bitvalor.FOX.high}}
-          </td>
-          <td>
-            {{bitvalor.FOX.low}}
-          </td>
-        </tr>
-        <tr>
-          <td class="logofox">
-            Mercado Bitcoin
-          </td>
 
-          <td>
-            {{bitvalor.MBT.vol}}
-          </td>
-          <td>
-            {{bitvalor.MBT.high}}
-          </td>
-          <td>
-            {{bitvalor.MBT.low}}
-          </td>
-        </tr>
+
+  <table class="pure-table pure-table-horizontal">
+    <tr>
+      <th>
+        Empresas
+      </th>
+      <th>
+        Volume
+      </th>
+      <th>
+        Maior Valor
+      </th>
+      <th>
+        Menor Valor
+      </th>
+    </tr>
+    <tr>
+      <td>
+        Foxbit
+      </td>
+      <td>
+        {{foxbit.vol}}
+      </td>
+      <td>
+        {{foxbit.high}}
+      </td>
+      <td>
+        {{foxbit.low}}
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Bitcointoyou
+      </td>
+
+      <td>
+        {{btctoyou.ticker.vol}}
+      </td>
+      <td>
+        {{btctoyou.ticker.high}}
+      </td>
+      <td>
+        {{btctoyou.ticker.low}}
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Negociecoins
+      </td>
+
+      <td>
+        {{negociecoins.vol}}
+      </td>
+      <td>
+        {{negociecoins.high}}
+      </td>
+      <td>
+        {{negociecoins.low}}
+      </td>
+    </tr>
+    <tr>
+      <td>
+        flowBTC
+      </td>
+
+      <td>
+        {{flowbtc.volume}}
+      </td>
+      <td>
+        {{flowbtc.high}}
+      </td>
+      <td>
+        {{flowbtc.low}}
+      </td>
+    </tr>
+  </table>
+
+
+</div>
+
+
+
+      <div class="card">
+        <div class="title-card">
+          <span>BitValor - Consolidado 12h Horas</span>
+        </div>
+
+
+        <table class="pure-table pure-table-horizontal">
+          <tr>
+            <th>
+              Empresas
+            </th>
+            <th>
+              Volume
+            </th>
+            <th>
+              Maior Valor
+            </th>
+            <th>
+              Menor Valor
+            </th>
+          </tr>
+          <tr>
+            <td>
+              Foxbit
+            </td>
+
+            <td>
+              {{bitvalor.FOX.vol}}
+            </td>
+            <td>
+              {{bitvalor.FOX.high}}
+            </td>
+            <td>
+              {{bitvalor.FOX.low}}
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Mercado Bitcoin
+            </td>
+
+            <td>
+              {{bitvalor.MBT.vol}}
+            </td>
+            <td>
+              {{bitvalor.MBT.high}}
+            </td>
+            <td>
+              {{bitvalor.MBT.low}}
+            </td>
+          </tr>
 
           <tr>
-            <td class="logofox">
+            <td>
               Bitcointoyou
             </td>
 
@@ -162,7 +177,7 @@
             </td>
           </tr>
           <tr>
-            <td class="logofox">
+            <td>
               Negociecoins
             </td>
 
@@ -176,89 +191,91 @@
               {{bitvalor.NEG.low}}
             </td>
           </tr>
-<tr>
-          <td class="logofox">
-            flowBTC
-          </td>
+          <tr>
+            <td>
+              flowBTC
+            </td>
 
-          <td>
-            {{bitvalor.FLW.vol}}
-          </td>
-          <td>
-            {{bitvalor.FLW.high}}
-          </td>
-          <td>
-            {{bitvalor.FLW.low}}
-          </td>
-        </tr>
-        <tr>
-          <td class="logofox">
-            LocalBitcoins
-          </td>
+            <td>
+              {{bitvalor.FLW.vol}}
+            </td>
+            <td>
+              {{bitvalor.FLW.high}}
+            </td>
+            <td>
+              {{bitvalor.FLW.low}}
+            </td>
+          </tr>
+          <tr>
+            <td>
+              LocalBitcoins
+            </td>
 
-          <td>
-            {{bitvalor.LOC.vol}}
-          </td>
-          <td>
-            {{bitvalor.LOC.high}}
-          </td>
-          <td>
-            {{bitvalor.LOC.low}}
-          </td>
-        </tr>
-      </table>
-    </div>
-<div class="mainCalculator">
-
-
-  <div class="mainresults">
-    <div class="results">
-            <span class="labelPrice"> BRL : </span>
-            <span class="price"> {{ brlref * bitcoin | number : 2}} </span>
-    </div>
-
-      <div class="results">
-        <span class="labelPrice">Bitcoin :</span>
-        <span class="price"> {{ brl / brlref | number : 8 }} </span>
+            <td>
+              {{bitvalor.LOC.vol}}
+            </td>
+            <td>
+              {{bitvalor.LOC.high}}
+            </td>
+            <td>
+              {{bitvalor.LOC.low}}
+            </td>
+          </tr>
+        </table>
       </div>
-  </div>
+
+    </div>
+    <div class="mainCalculator">
 
 
-    <div class="inputCalculator">
-            <input class="inputcalc" type="text" name="brlrefname" value="" ng-model="brlref" ng-required="number" placeholder="Digite o preço do Bitcoin">
-            <input class="inputcalc" type="text" name="brlname" value="" ng-model="brl" ng-required="number" placeholder="Valor em Reais">
-            <input class="inputcalc" type="text" name="btcname" value="" ng-model="bitcoin" required="number" placeholder="Valor em Bitcoins">
+      <div class="mainresults">
+        <div class="results">
+          <span class="labelPrice"> BRL : </span>
+          <span class="price"> {{ brlref * bitcoin | number : 2}} </span>
+        </div>
+
+        <div class="results">
+          <span class="labelPrice">Bitcoin :</span>
+          <span class="price"> {{ brl / brlref | number : 8 }} </span>
+        </div>
+      </div>
+
+
+      <div class="inputCalculator">
+        <input class="inputcalc" type="text" name="brlrefname" value="" ng-model="brlref" ng-required="number" placeholder="Digite o preço do Bitcoin">
+        <input class="inputcalc" type="text" name="brlname" value="" ng-model="brl" ng-required="number" placeholder="Valor em Reais">
+        <input class="inputcalc" type="text" name="btcname" value="" ng-model="bitcoin" required="number" placeholder="Valor em Bitcoins">
+      </div>
+
+
     </div>
 
+    <div class="footer">
+      <p>Esta página é mantida por Saulo Campos</p>
+      <p>
+        Repositório : <a href="https://github.com/saulocamposi/calculadorabitcoin">https://github.com/saulocamposi/calculadorabitcoin</a>
+      </p>
+    </div>
 
-  </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" charset="utf-8"></script>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="valuep.js"></script>
+    <script>
+      (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+          (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  <div class="footer">
-    <p>Esta página é mantida por Saulo Campos</p>
-    <p>
-      Repositório : <a href="https://github.com/saulocamposi/calculadorabitcoin">https://github.com/saulocamposi/calculadorabitcoin</a>
-    </p>
-  </div>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" charset="utf-8"></script>
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script src="valuep.js"></script>
-  <script>
-    (function(i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r;
-      i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-71521810-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+      ga('create', 'UA-71521810-1', 'auto');
+      ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
