--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
   <div id="pagewrap">
 
+    <div class="header">
+      <span class="title-logo">Calculadora Bitcoin</span>
+    </div>
     <div class="block">
-      <div class="header">
-        <h1>Calculadora Bitcoin </h1>
-      </div>
+
 
 
 
