Insertion of ng-include

--- a/index.html
+++ b/index.html
@@ -17,219 +17,15 @@
       <span class="title-logo">Calculadora Bitcoin</span>
     </div>
 
-
-
     <div class="block">
-<div class="card">
-  <div class="title-card">
-    <span>Exchanges Brasileiras</span>
-  </div>
-
-  <table class="pure-table pure-table-horizontal">
-    <tr>
-      <th>
-        Empresas
-      </th>
-      <th>
-        Volume
-      </th>
-      <th>
-        Maior Valor
-      </th>
-      <th>
-        Menor Valor
-      </th>
-    </tr>
-    <tr>
-      <td>
-        Foxbit
-      </td>
-      <td>
-        {{foxbit.vol}}
-      </td>
-      <td>
-        {{foxbit.high}}
-      </td>
-      <td>
-        {{foxbit.low}}
-      </td>
-    </tr>
-    <tr>
-      <td>
-        Bitcointoyou
-      </td>
-
-      <td>
-        {{btctoyou.ticker.vol}}
-      </td>
-      <td>
-        {{btctoyou.ticker.high}}
-      </td>
-      <td>
-        {{btctoyou.ticker.low}}
-      </td>
-    </tr>
-    <tr>
-      <td>
-        Negociecoins
-      </td>
-
-      <td>
-        {{negociecoins.vol}}
-      </td>
-      <td>
-        {{negociecoins.high}}
-      </td>
-      <td>
-        {{negociecoins.low}}
-      </td>
-    </tr>
-    <tr>
-      <td>
-        flowBTC
-      </td>
-
-      <td>
-        {{flowbtc.volume}}
-      </td>
-      <td>
-        {{flowbtc.high}}
-      </td>
-      <td>
-        {{flowbtc.low}}
-      </td>
-    </tr>
-  </table>
-</div>
-
-      <div class="card">
-        <div class="title-card">
-          <span>BitValor - Consolidado 12h Horas</span>
-        </div>
-
-
-        <table class="pure-table pure-table-horizontal">
-          <tr>
-            <th>
-              Empresas
-            </th>
-            <th>
-              Volume
-            </th>
-            <th>
-              Maior Valor
-            </th>
-            <th>
-              Menor Valor
-            </th>
-          </tr>
-          <tr>
-            <td>
-              Foxbit
-            </td>
-
-            <td>
-              {{bitvalor.FOX.vol}}
-            </td>
-            <td>
-              {{bitvalor.FOX.high}}
-            </td>
-            <td>
-              {{bitvalor.FOX.low}}
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Mercado Bitcoin
-            </td>
-
-            <td>
-              {{bitvalor.MBT.vol}}
-            </td>
-            <td>
-              {{bitvalor.MBT.high}}
-            </td>
-            <td>
-              {{bitvalor.MBT.low}}
-            </td>
-          </tr>
-
-          <tr>
-            <td>
-              Bitcointoyou
-            </td>
-
-            <td>
-              {{bitvalor.B2U.vol}}
-            </td>
-            <td>
-              {{bitvalor.B2U.high}}
-            </td>
-            <td>
-              {{bitvalor.B2U.low}}
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Negociecoins
-            </td>
-
-            <td>
-              {{bitvalor.NEG.vol}}
-            </td>
-            <td>
-              {{bitvalor.NEG.high}}
-            </td>
-            <td>
-              {{bitvalor.NEG.low}}
-            </td>
-          </tr>
-          <tr>
-            <td>
-              flowBTC
-            </td>
-
-            <td>
-              {{bitvalor.FLW.vol}}
-            </td>
-            <td>
-              {{bitvalor.FLW.high}}
-            </td>
-            <td>
-              {{bitvalor.FLW.low}}
-            </td>
-          </tr>
-          <tr>
-            <td>
-              LocalBitcoins
-            </td>
-
-            <td>
-              {{bitvalor.LOC.vol}}
-            </td>
-            <td>
-              {{bitvalor.LOC.high}}
-            </td>
-            <td>
-              {{bitvalor.LOC.low}}
-            </td>
-          </tr>
-        </table>
-      </div>
-
+        <ng-include src="'card-exchanges.html'"></ng-include>
+        <ng-include src="'card-bitvalor.html'"></ng-include>
     </div>
-
-
 
     <div ng-view></div>
 
-
-
     <div class="footer">
-      <p>Esta página é mantida por Saulo Campos</p>
-      <p>
-        Repositório : <a href="https://github.com/saulocamposi/calculadorabitcoin">https://github.com/saulocamposi/calculadorabitcoin</a>
-      </p>
+      <ng-include src="'footer.html'"></ng-include>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js" charset="utf-8"></script>
