--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Calculadora Bitcoin</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="main_calculator.css">
+  <link rel="stylesheet" type="text/css" href="card.css">
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 </head>
 
@@ -17,9 +19,10 @@
       <span class="title-logo">Calculadora Bitcoin</span>
     </div>
 
-    <div class="block">
+    <div class="card-index">
         <ng-include src="'card-exchanges.html'"></ng-include>
         <ng-include src="'card-bitvalor.html'"></ng-include>
+        <ng-include src="'card-cryptsy.html'"></ng-include>
     </div>
 
     <div ng-view></div>
