Some fix of conflicts of libs

--- a/tpl/bitcoincalculator.html
+++ b/tpl/bitcoincalculator.html
@@ -3,7 +3,8 @@
     <div class="title-card-calculator-text">
       <a href="#/">Calculadora Bitcoin</a>
       <a href="#satoshi">Calculadora Satoshi</a>
-    </div>    
+      <a href="#bit">Calculadora Bits</a>
+    </div>
   </div>
   <div class="mainresults">
     <div class="results">
