--- a/tpl/card-bitvalor.html
+++ b/tpl/card-bitvalor.html
@@ -2,7 +2,7 @@
   <div class="title-card">
     <span>BitValor - Consolidado 12h Horas</span>
   </div>
-
+{{bitvalor}}
 
   <table class="pure-table pure-table-horizontal">
     <tr>
