--- a/index_material.html
+++ b/index_material.html
@@ -5,10 +5,13 @@
   <meta charset="utf-8">
   <title>Calculadora Bitcoin</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+<!--
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+-->
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/main_calculator.css">
   <link rel="stylesheet" type="text/css" href="css/card.css">
-  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 </head>
 
 <body ng-controller="mbCtrl">
@@ -20,9 +23,9 @@
     </div>
 
     <div class="card-index">
-      <ng-include src="'tpl/card-exchanges.html'"></ng-include>
-      <ng-include src="'tpl/card-bitvalor.html'"></ng-include>
-      <ng-include src="'tpl/card-cryptsy.html'"></ng-include>
+        <ng-include src="'tpl/card-exchanges.html'"></ng-include>
+        <ng-include src="'tpl/card-bitvalor.html'"></ng-include>
+        <ng-include src="'tpl/card-cryptsy.html'"></ng-include>
     </div>
 
     <div ng-view></div>
@@ -45,7 +48,10 @@
 
     <script src="./bower_components/angular-material/angular-material.js" type="text/javascript" ></script>
 
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <Angular Material Library
+<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="valuep.js"></script>
     <script>
       (function(i, s, o, g, r, a, m) {
