--- a/tpl/card-exchanges.html
+++ b/tpl/card-exchanges.html
@@ -92,5 +92,22 @@
         {{flowbtc.last}}
       </td>
     </tr>
+    <tr>
+      <td>
+        Mercadobitcoin
+      </td>
+      <td>
+        {{mtc.vol}}
+      </td>
+      <td>
+        {{mtc.high}}
+      </td>
+      <td>
+        {{mtc.low}}
+      </td>
+      <td>
+        {{mtc.last}}
+      </td>
+    </tr>
   </table>
 </div>
