--- a/tpl/card-exchanges.html
+++ b/tpl/card-exchanges.html
@@ -40,6 +40,23 @@
     </tr>
     <tr>
       <td>
+        Mercadobitcoin
+      </td>
+      <td>
+        {{mtc.ticker.vol}}
+      </td>
+      <td>
+        {{mtc.ticker.high}}
+      </td>
+      <td>
+        {{mtc.ticker.low}}
+      </td>
+      <td>
+        {{mtc.ticker.last}}
+      </td>
+    </tr>
+    <tr>
+      <td>
         Bitcointoyou
       </td>
 
@@ -90,23 +107,6 @@
       </td>
       <td>
         {{flowbtc.last}}
-      </td>
-    </tr>
-    <tr>
-      <td>
-        Mercadobitcoin
-      </td>
-      <td>
-        {{mtc.vol}}
-      </td>
-      <td>
-        {{mtc.high}}
-      </td>
-      <td>
-        {{mtc.low}}
-      </td>
-      <td>
-        {{mtc.last}}
       </td>
     </tr>
   </table>
