--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@
     <div class="card-index">
       <ng-include src="'tpl/card-exchanges.html'"></ng-include>
       <ng-include src="'tpl/card-bitvalor.html'"></ng-include>
-      <ng-include src="'tpl/card-cryptsy.html'"></ng-include>
+      <ng-include src="'tpl/card-polionex.html'"></ng-include>
     </div>
 
-    <div ng-view></div>
+
+    <div>
+      <div ng-view>
+      </div>
+      <div class="card-index-right">
+        <ng-include src="'tpl/card-foxbitwallet.html'"></ng-include>
+      </div>
+
+    </div>
 
     <div class="footer">
       <ng-include src="'tpl/footer.html'"></ng-include>
@@ -38,14 +46,14 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
 
-    <script src="./bower_components/angular/angular.js" type="text/javascript" ></script>
+    <script src="./bower_components/angular/angular.js" type="text/javascript"></script>
     <script src="./bower_components/angular/angular-route.js" type="text/javascript"></script>
-    <script src="./bower_components/angular-animate/angular-animate.js" type="text/javascript" ></script>
-    <script src="./bower_components/angular-aria/angular-aria.js" type="text/javascript" ></script>
+    <script src="./bower_components/angular-animate/angular-animate.js" type="text/javascript"></script>
+    <script src="./bower_components/angular-aria/angular-aria.js" type="text/javascript"></script>
 
-    <script src="./bower_components/angular-material/angular-material.js" type="text/javascript" ></script>
+    <script src="./bower_components/angular-material/angular-material.js" type="text/javascript"></script>
 
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="valuep.js"></script>
     <script>
       (function(i, s, o, g, r, a, m) {
