The Foxbitwallet card was inserted

--- a/tpl/card-foxbitwallet.html
+++ b/tpl/card-foxbitwallet.html
@@ -45,7 +45,7 @@
       Total recebido em BTC
       </td>
       <td>
-      {{wfoxhot.received}}
+      {{wfoxcold.received}}
       </td>
     </tr>
     <tr>
@@ -53,7 +53,7 @@
       Total Enviado em BTC
       </td>
       <td>
-        {{wfoxhot.sent}}
+        {{wfoxcold.sent}}
       </td>
     </tr>
     <tr>
@@ -61,7 +61,7 @@
       Balanço Final em BTC
       </td>
       <td>
-      {{wfoxhot.balance}}
+      {{wfoxcold.balance}}
       </td>
     </tr>
   </table>
