--- a/tpl/bitcalculator.html
+++ b/tpl/bitcalculator.html
@@ -4,6 +4,7 @@
       <a href="#/">Calculadora Bitcoin</a>
       <a href="#satoshi">Calculadora Satoshis</a>
       <a href="#bit">Calculadora Bits</a>
+      <a href="#income">Lucro Trade</a>
     </div>
   </div>
   <div class="mainresults">
